# 11-parallel_simplex

./: .gitignore  README.md  benchmark.ipynb  pyproject.toml  sample_input_LLP.json  testik.py
assets/: README.md
example_inputs/: input_LLP_00002.json  input_LLP_00005.json  input_LLP_00010.json  input_LLP_00025.json  input_LLP_00075.json  input_LLP_00100.json  input_LLP_00250.json
src/: benchmark.py
src/simplex/: dual_problem.py  exceptions.py  gpu_simplex_table.py  simplex_problem.py  simplex_table.py  types.py
src/simplex/simplex_table/: __init__.py  base.py  gpu.py  simplex_table.py  simplex_table_gpu.py
src/simplex/simplex_table/gpu/: __init__.py  cupy.py  numba.py
