[tool.poetry]
name = "11-parallel-simplex"
version = "0.1.0"
description = "Решение задачи линейного программирования при помощи параллельного варианта симплекс-метода"
authors = ["aaaaaaaalesha"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
prettytable = "^3.11.0"
notebook = "^7.3.1"
cupy-cuda12x = "^13.3.0"
numba = "0.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
